--- a/client/app/modules/header/templates/menu.tpl.html
+++ b/client/app/modules/header/templates/menu.tpl.html
@@ -9,19 +9,19 @@
         {{ me.profile.realname || me.profile.username }}
     </h2>
     <div class="list-group" >
-        <a ui-route="/user/{{me.profile.id}}" class="list-group-item" ng-class="{'menu-active':$uiRoute}" ng-href="user/{{me.profile.id}}#profile" style="border:none;">
+        <a  class="list-group-item"  ng-href="user/{{me.profile.id}}#profile"  style="border:none;">
             Profile
         </a>
-        <a ui-route="/message" ui-sref="message" class="list-group-item" ng-class="{'menu-active':$uiRoute}" style="border:none;">
+        <a ui-route="/message"   ui-sref="message" class="list-group-item" ng-class="{'menu-active':$uiRoute}" style="border:none;">
             Messages
         </a>
-        <a ui-route="/user/{{me.profile.id}}#challenges" ng-href="user/{{me.profile.id}}#challenges" class="list-group-item"  ng-class="{'menu-active':$uiRoute}" style="border:none;">
+        <a scroll-on-click href="user/{{me.profile.id}}#challenges" class="list-group-item"  style="border:none;">
             Challenges
         </a>
-        <a ui-route="" ng-href="user/{{me.profile.id}}#projects" class="list-group-item" ng-class="{'menu-active':$uiRoute}" style="border:none;">
+        <a  href="#projects" class="list-group-item" du-smooth-scroll style="border:none;">
             Projects
         </a>
-        <a ui-route="" href="" ui-sref="userSettings({ uid : me.profile.id })" class="list-group-item" ng-class="{'menu-active':$uiRoute}" style="border:none;">
+        <a  ui-sref="userSettings({ uid : me.profile.id })" class="list-group-item" style="border:none;">
             Edit Profile
         </a>
     </div>
