profile page improved remove a lot of console.log (client side)

--- a/client/app/modules/account/templates/signin.tpl.html
+++ b/client/app/modules/account/templates/signin.tpl.html
@@ -14,7 +14,7 @@
             </span>
         <br/>
         <div class="center" style="color: #000000;">
-            <i class="fa fa-2x my-btn fa-wrench" ng-click="forgotPass()" tooltip="forgot your pass ?"></i>
+            <span ng-click="forgotPass()" style="cursor:pointer;">Forgot your password ?</span>
             <i class="fa fa-2x my-btn fa-sign-in" ng-click="login($event)" tooltip="sign-in"></i>
         </div>
     </form>
