--- a/client/app/modules/header/templates/header.tpl.html
+++ b/client/app/modules/header/templates/header.tpl.html
@@ -103,7 +103,7 @@
     </button>
 </material-toolbar>
 
-<material-sidenav class="material-sidenav-right material-whiteframe-z2 material-theme-light" component-id="right" >
-    <div ng-include="sideNavTemplateUrl">
+<material-sidenav class="material-sidenav-right material-whiteframe-z2 material-theme-light" component-id="right" style="height:100%;">
+    <div ng-include="sideNavTemplateUrl" style="height:100%;">
     </div>
 </material-sidenav>
