--- a/client/app/modules/header/templates/menu.tpl.html
+++ b/client/app/modules/header/templates/menu.tpl.html
@@ -1,4 +1,4 @@
-<section style="padding-left : 20px; padding-top: 20px;" >
+<section style="padding-left : 20px; padding-top: 20px; height:100%; position:relative;" >
     <div class="row">
         <div class="col-xs-6">
             <img ng-src="{{ me.profile.poster || 'images/avater.jpg' }}" alt="{{ me.profile.username }}'s photo" width="100%" class="img-rounded pull-left"/>
@@ -8,7 +8,7 @@
     <h2 style="color:black;">
         {{ me.profile.realname || me.profile.username }}
     </h2>
-    <div class="list-group" >
+    <div class="list-group row" >
         <a  class="list-group-item"  ng-href="user/{{me.profile.id}}#profile"  style="border:none;">
             Profile
         </a>
@@ -24,5 +24,14 @@
         <a  ui-sref="userSettings({ uid : me.profile.id })" class="list-group-item" style="border:none;">
             Edit Profile
         </a>
+    </div>
+        <div style="position: absolute; bottom : 0px;color:black;width:100%;" ng-if="me.profile">
+            <div class="pull-left text-muted">
+                <p>You're logged as {{ me.profile.username }}</p>
+            </div>
+            <div class="pull-right" style="margin-right: 25px;">
+                <i class="fa fa-sign-out fa-2x my-btn" tooltip="sign-out" ng-click="signout()"></i>
+            </div>
+        </div>
     </div>
 </section>
