--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -14,7 +14,9 @@
                         Organizations or individuals pose challenges, which are like competitions, and people suggest projects that meet this challenge. Anyone can follow and join a project to help develop it.
                     </p>
                 </hgroup>
-
+                <div style="position : absolute; bottom : 50px; left : 35%; right: 35%;width:30%;" class="center">
+                    <a class="btn btn-info btn-block" href="#signin" ng-if="!me">Join us</a>
+                </div>
             </section>
             <section class="carousel-body" ng-if="challenge.intro == 2" style="height:100%;position:relative">
                 <article style="position:absolute; top:0;bottom:0;  margin: auto;height : 200px;">
@@ -27,19 +29,24 @@
                         You can check our most popular challenges ==>
                     </p>
                 </article>
-
-            </section>
-            <article class="carousel-body"nf-if="!challenge.intro">
-                <h1 class="center center-vertical ">
-                    <a ui-sref="challenge.details({ pid : challenge.accessUrl })">{{challenge.title}}</a>
-                </h1>
-                <p class="carousel-brief"  ng-bind-html="challenge.brief">
-                </p>
-                <div showtags="" entity="challenge" style="position:absolute; bottom : 10px; right:50px;"></div>
-                <div style="position : absolute; bottom : 50px; left : 45%; right: 45%; width: 10%" class="center">
-                    <a class="btn btn-default" href="#signin" ng-if="!me">Join us</a>
+                <div style="position : absolute; bottom : 50px; left : 35%; right: 35%;width:30%;" class="center">
+                    <a class="btn btn-info btn-block" href="#signin" ng-if="!me">Join us</a>
                 </div>
-            </article>
+            </section>
+            <section style="height:100%;position:relative" nf-if="!challenge.intro" class="carousel-body" >
+                <article >
+                    <h1 class="center center-vertical ">
+                        <a ui-sref="challenge.details({ pid : challenge.accessUrl })">{{challenge.title}}</a>
+                    </h1>
+                    <p class="carousel-brief"  ng-bind-html="challenge.brief">
+                    </p>
+                    <div showtags="" entity="challenge" style="position:absolute; bottom : 10px; right:50px;"></div>
+                    <div style="position : absolute; bottom : 50px; left : 35%; right: 35%;width:30%;" class="center">
+                        <a class="btn btn-info btn-block" ui-sref="challenges" ng-if="!me">See more challenges</a>
+                    </div>
+                </article>
+            </section>
+
         </li>
     </ul>
 </section>
@@ -92,14 +99,14 @@
             </material-whiteframe>
         </div>
     </section>
-    <section class="row" id="signin" ng-if="!me">
-        <div class="signin-container">
-            <ng-include src="'/modules/account/templates/signup.tpl.html'">
 
-            </ng-include>
-        </div>
-    </section>
 </section>
+<section class="row" id="signin" ng-if="!me">
+    <div class="signin-container">
+        <ng-include src="'/modules/account/templates/signup.tpl.html'">
 
+        </ng-include>
+    </div>
+</section>
 <div ng-include id="footer" src="'modules/footer/templates/footer.tpl.html'"></div>
 
