small clean of the server
recommandation in progress

--- a/client/app/modules/account/templates/signin.tpl.html
+++ b/client/app/modules/account/templates/signin.tpl.html
@@ -8,7 +8,7 @@
                 <label for="signinUsername">Username</label>
                 <input id="signinUsername" type="text" ng-model="signin.username">
             </span>
-            <span class="material-input-group material-input-group-theme-yellow">
+            <span class="material-input-group">
                 <label for="signinPassword">Password</label>
                 <input id="signinPassword" type="password" ng-model="signin.password">
             </span>
