--- a/client/app/modules/account/templates/signup.tpl.html
+++ b/client/app/modules/account/templates/signup.tpl.html
@@ -1,4 +1,4 @@
-<form name="signup" class="signup-form container" ng-controller="RegisterCtrl">
+<form name="signupForm" class="signup-form container" ng-controller="RegisterCtrl">
     <div class="center">
         <img src="images/svg/Joinus.svg" alt="Join Us"/>
     </div>
@@ -24,7 +24,7 @@
             <input id="signupPassword2" type="password" ng-model="check.password" autocomplete="false">
         </span>
         <br/>
-        <ui-select ng-model="rgform.localisation"
+        <ui-select ng-model="signup.localisation"
                    theme="bootstrap"
                    reset-search-input="false">
             <ui-select-match placeholder="Enter an address...">{{$select.selected.formatted_address}}</ui-select-match>
@@ -35,7 +35,7 @@
             </ui-select-choices>
         </ui-select>
         <material-checkbox>
-            <input type="checkbox" ng-model="signupForm.isValid">
+            <input type="checkbox" ng-model="signupForm.valid">
             <small>
                 i have read the terms of services
             </small>
@@ -44,6 +44,6 @@
         <!--<i class="fa fa-sign-in fa-2x my-btn" ng-click="registerUser()"></i>-->
     </div>
     <div class="col-xs-12 center">
-        <button class="btn btn-info" style="width:200px;" ng-click="registerUser($event)"> Register</button>
+        <button class="btn btn-info" style="width:200px;" ng-disabled="!signupForm.valid"  ng-click="registerUser($event)"> Register</button>
     </div>
 </form>
