--- a/client/app/modules/topic/templates/topic-details.tpl.html
+++ b/client/app/modules/topic/templates/topic-details.tpl.html
@@ -1,4 +1,4 @@
-<material-tabs selected="0" class="material-theme-light-blue">
+<material-tabs  class="material-theme-light-blue">
     <material-tab label="<i class='fa fa-comments fa-2x'></i>" ui-sref="project.topic.details.discussion({ tid : tid })" class="material-theme-light-blue"></material-tab>
     <material-tab label="<i class='fa fa-file fa-2x'></i>" ui-sref="project.topic.details.resources({ tid : tid })" class="material-theme-light-blue"></material-tab>
 </material-tabs>
