--- a/client/app/modules/user/templates/me.tpl.html
+++ b/client/app/modules/user/templates/me.tpl.html
@@ -46,7 +46,7 @@
                     </h4>
                     <div class="row">
                         <div class="col-xs-4" ng-repeat="user in recommandation.users">
-                            <user-block user="user"></user-block>
+                            <user-block my-user="user"></user-block>
                         </div>
                     </div>
                 </article>
