--- a/client/app/modules/topic/templates/topic.tpl.html
+++ b/client/app/modules/topic/templates/topic.tpl.html
@@ -12,11 +12,11 @@
             </a>
         </div>
         <div>
-            <i class="fa fa-2x my-btn fa-circle-o" ng-class="{ active : !isActive }" tooltip="all" ng-click="filterTopics()"></i>
-            <i class="fa fa-2x my-btn fa-comments" ng-class="{ active : isActive ==1 }" tooltip="discussion" ng-click="filterTopics(1)"></i>
-            <i class="fa fa-2x my-btn fa-tasks" ng-class="{ active : isActive == 2 }" tooltip="protocol" ng-click="filterTopics(2)"></i>
-            <i class="fa fa-2x my-btn fa-flask" ng-class="{ active : isActive == 3 }" tooltip="experiment" ng-click="filterTopics(3)"></i>
-            <i class="fa fa-2x my-btn fa-graduation-cap" ng-class="{ active : isActive == 4 }" tooltip="result" ng-click="filterTopics(4)"></i>
+            <i class="fa my-btn fa-circle-o" ng-class="{ active : !isActive }" tooltip="all" ng-click="filterTopics()"></i>
+            <i class="fa my-btn fa-comments" ng-class="{ active : isActive ==1 }" tooltip="discussion" ng-click="filterTopics(1)"></i>
+            <i class="fa my-btn fa-tasks" ng-class="{ active : isActive == 2 }" tooltip="protocol" ng-click="filterTopics(2)"></i>
+            <i class="fa my-btn fa-flask" ng-class="{ active : isActive == 3 }" tooltip="experiment" ng-click="filterTopics(3)"></i>
+            <i class="fa my-btn fa-graduation-cap" ng-class="{ active : isActive == 4 }" tooltip="result" ng-click="filterTopics(4)"></i>
         </div>
         <div class="list-group">
             <a ng-repeat="topic in topics | filter:search" class="list-group-item" ui-route="/project/{{ projectId }}/topic/{{ topicId }}"  ng-class="{ active : topicId == topic.id }" ui-sref="project.topic.details.discussion({ tid : topic.id })">
