--- a/client/app/modules/user/templates/me.tpl.html
+++ b/client/app/modules/user/templates/me.tpl.html
@@ -19,7 +19,7 @@
             </p>
         </article>
     </section>
-    <section class="col-md-6">
+    <section class="col-md-6" style="height:100%;overflow:auto;">
         <article>
             <h1 ng-bind="profile.realname || profile.username"></h1>
             <p class="text-muted">
